--- a/solomon/wwwroot/index.html
+++ b/solomon/wwwroot/index.html
@@ -2,26 +2,30 @@
 
 <html ng-app="solomon" ng-strict-di>
 <head>
+    <base href="/" />
     <meta charset="utf-8" />
     <title></title>
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="wwwroot/styles/vendor.css">
-    <link rel="stylesheet" href="wwwroot/styles/app.css">
+    <link rel="stylesheet" href="styles/vendor.css">
+    <link rel="stylesheet" href="styles/app.css">
     <!-- endinject -->
 
 </head>
 <body>
     <div>
         <div ng-include="'app/layout/shell.html'"></div>
-        <div id="splash-page" ng-show="false">
+        <div id="splash-page" >
             <div class="page-splash">
                 <div class="page-splash-message">
                     hottowelDemo
                 </div>
-                <div class="progress progress-striped active page-progress-bar">
+                <div class="progress">
+                <progressbar class="progress-striped active" value="1" max="1"></progressbar>
+                    </div>
+                <!--<div class="progress progress-striped active page-progress-bar">
                     <div class="bar"></div>
-                </div>
+                </div>-->
             </div>
         </div>
     </div>
@@ -29,6 +33,7 @@
     <!-- inject:js -->
     <script src="scripts/vendor.js"></script>
     <script src="scripts/app.js"></script>
+    <script src="scripts/app.partials.js"></script>
     <!-- endinject -->
 </body>
 </html>
