--- a/qarin/index.html
+++ b/qarin/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 <head>
@@ -14,8 +14,6 @@
     </style>
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="styles/vendor.css">
-    <link rel="stylesheet" href="styles/app.css">
     <!-- endinject -->
 </head>
 <body ng-app="qarin">
@@ -32,9 +30,7 @@
     <script src="scripts/app.js"></script>-->
 
     <!-- inject:js -->
-    <script src="scripts/vendor.js"></script>
-    <script src="scripts/app.js"></script>
-    <script src="scripts/app.partials.js"></script>
+    <!-- the rest of the *.js files will be injected here -->
     <!-- endinject -->
 </body>
 </html>
