--- a/solomon/index.html
+++ b/solomon/index.html
@@ -20,7 +20,8 @@
 </head>
 <body>
     <div>
-        <div ng-include="'app/layout/shell.html'"></div>
+        <!-- <div ng-include="'app/layout/shell.html'"></div> -->
+        <div ui-view></div>
         <div id="splash-page" ng-show="false">
             <div class="page-splash">
                 <div class="page-splash-message">
