--- a/solomon/app/areas/login/login.html
+++ b/solomon/app/areas/login/login.html
@@ -1,5 +1,5 @@
 <div id="login">
-
+<div class="login-box">
     <div class="login-header">
         <h1>genie</h1>
     </div>
@@ -32,4 +32,5 @@
             <a ui-sref="access.forgotpwd">Forgot password?</a>
         </div>
     </form>
+    </div>
 </div>
