--- a/qarin/app/areas/home/home.html
+++ b/qarin/app/areas/home/home.html
@@ -15,7 +15,7 @@
         </div>
 
         <div>
-            <button class="btn btn-lg" ui-sref="chat">Chat</button>
+            <button class="btn btn-lg" ui-sref="chat-list">Chat</button>
             <button class="btn btn-lg" ng-click="requestHelp()">Request Help</button>
             <button class="btn btn-lg">Find</button>
         </div>
