--- a/qarin/wwwroot/index.html
+++ b/qarin/wwwroot/index.html
@@ -19,12 +19,25 @@
     <!-- endinject -->
 </head>
 <body ng-app="qarin">
+
+    <pre class="pull-left" style="width: 300px; min-height:400px; height: 95vh; overflow-y: scroll; margin: 0;"
+    >{{$state.current | json}}</pre>
+
     <div class="device-root">
-        <div ui-view="notifications"></div>
-
-        <ui-view></ui-view>
-    </div>
-
+        <div ng-include="'app/areas/layout/header.html'"></div>
+        
+        <div ui-view></div>
+        <div id="splash-page" ng-show="showSplash" class="ng-hide-animate">
+            <div class="page-splash">
+                <div class="page-splash-message">
+                    genie
+                </div>
+                <!-- <div class="progress">
+                    <progressbar class="progress-striped active" value="1" max="1"></progressbar>
+                </div>-->
+            </div>
+        </div>
+    </div>  
     <!--<script src="vendor/angular.js"></script>
     <script src="vendor/angular-ui-router.js"></script>
     <script src="vendor/socket.io.js"></script>
