--- a/qarin/app/areas/chat/chat.html
+++ b/qarin/app/areas/chat/chat.html
@@ -1,10 +1,22 @@
-﻿
-<form ng-submit="vm.send()">
+﻿<form id='chat' ng-submit="vm.send()">
     <h1>Chat</h1>
-    <div style="height: 300px" id="chatLog">
-        <p ng-repeat="m in vm.chat.messages">{{m.user}}: {{m.message}}</p>
-    </div>
+    <div class="chat-window">
+        <div class="message-pane">
+            <div ng-repeat="m in vm.chat.messages" ng-class="{'chat-bubble': true, sent: m.sent, received: !m.sent}">
+                <span class="message-time">{{m.time | date: 'medium'}}</span>
+                <div class="message-body">{{m.message}}</div>
+            </div>
+        </div>
 
-    <input type="text" name="message" ng-model="vm.message" />
-    <button type="submit">Send</button>
+        <div class="chat-controls input-group">
+            <input type="text" ng-model="vm.message" class="form-control">
+            <span class="input-group-btn">
+            	<button type="submit" class="btn btn-default">
+                	<i class="glyphicon glyphicon-send"></i>
+            	</button>
+        	</span>
+        </div>
+    </div>
+    <!--  <input type="text" name="message" ng-model="vm.message" />
+    <button type="submit">Send</button> -->
 </form>
