--- a/qarin/app/areas/chat/chatlist.html
+++ b/qarin/app/areas/chat/chatlist.html
@@ -1,14 +1,12 @@
 <h1>Chats</h1>
 <div>
-    <div ng-repeat="chat in vm.chats">
-
-    	<h5>{{chat.users}}</h5>
-    	<span>{{chat._id}}</span>
-    	<div>
-    		<a ui-sref="chat({id: chat._id})">
-    			{{chat.lastMessage.message}}
-    		</a>
-    	</div>
-
+    <div ng-repeat="chat in vm.chats" class="chat-log-list-item">
+        <a ui-sref="chat({id: chat._id})">
+            <h5>{{chat.users}}</h5>
+            <p>
+                {{chat.lastMessage.message}}
+            </p>
+        </a>
     </div>
+    <div class="add-bubble" ng-click="vm.create()">+</div>
 </div>
