--- a/qarin/app/areas/products/search.html
+++ b/qarin/app/areas/products/search.html
@@ -1,1 +1,17 @@
 <h1>Search</h1>
+<form ng-submit="vm.search()">
+    <div class="input-group">
+        <input type="text" ng-model="vm.query" class="form-control">
+        <span class="input-group-btn">
+            	<button type="submit" class="btn btn-default">
+                	<i class="glyphicon glyphicon-search"></i>
+            	</button>
+        	</span>
+    </div>
+    <div>
+        <div ng-repeat="p in vm.products" class="product-box">
+            <h5 class="product-name">{{p.name}}</h5>
+            <p class="product-description">{{p.description}}</p>
+        </div>
+    </div>
+</form>
