--- a/qarin/app/areas/products/search.html
+++ b/qarin/app/areas/products/search.html
@@ -1,19 +1,24 @@
 <h1>Search</h1>
-<form ng-submit="vm.search()">
+<form ng-submit="vm.search()" style="position: relative;">
     <div class="input-group">
         <input type="text" ng-model="vm.query" class="form-control">
         <span class="input-group-btn">
-            	<button type="submit" class="btn btn-default">
-                	<i class="glyphicon glyphicon-search"></i>
-            	</button>
-        	</span>
+        	<button type="submit" class="btn btn-default">
+            	<i class="glyphicon glyphicon-search"></i>
+        	</button>
+    	</span>
     </div>
-    <div>
-        <div ng-repeat="p in vm.products" class="product-box">
-        	<a ui-sref="product({productId: p._id})">
-            	<h5 class="product-name">{{p.name}}</h5>
-            	<p class="product-description">{{p.description}}</p>
-            </a>
+    <div class="search-results">
+        <div ng-repeat="p in vm.products" class="product-box row">
+            <div class="col-md-3 image-container">
+                <img ng-src="{{p.imageUrl}}" />
+            </div>
+            <div class="col-md-9">
+                <a ui-sref="product({productId: p._id})">
+                    <h5 class="product-name">{{p.name}}</h5>
+                    <p class="product-description">{{p.description}}</p>
+                </a>
+            </div>
         </div>
     </div>
 </form>
