--- a/qarin/app/areas/products/product.html
+++ b/qarin/app/areas/products/product.html
@@ -1,5 +1,6 @@
-<h2>Product Info</h2>
-<div>{{vm.product.name}}</div>
+
+<h2>{{vm.product.name}}</h2>
+<img ng-src="{{vm.product.imageUrl}}">
 <div>{{vm.product.description}}</div>
 
 <button ng-click="vm.createChat()">Ask About</button>
