--- a/solomon/index.html
+++ b/solomon/index.html
@@ -25,7 +25,7 @@
         <div id="splash-page" ng-show="showSplash" class="ng-hide-animate">
             <div class="page-splash">
                 <div class="page-splash-message">
-                    hottowelDemo
+                    genie
                 </div>
                 <div class="progress">
                 <progressbar class="progress-striped active" value="1" max="1"></progressbar>
