--- a/qarin/app/areas/products/search.html
+++ b/qarin/app/areas/products/search.html
@@ -1,5 +1,5 @@
 <h1>Search</h1>
-<form ng-submit="vm.search()" style="position: relative;">
+<form ng-submit="vm.search()">
     <div class="input-group">
         <input type="text" ng-model="vm.query" class="form-control">
         <span class="input-group-btn">
@@ -8,17 +8,40 @@
         	</button>
     	</span>
     </div>
-    <div class="search-results">
-        <div ng-repeat="p in vm.products" class="product-box row">
-            <div class="col-md-3 image-container">
-                <img ng-src="{{p.imageUrl}}" />
+</form>
+
+<div class="search-results container-fluid">
+
+<!--     <div class="">
+        <div class="row">
+            <div class="col-xs-3 image-container">
+                <img src="http://placehold.it/250x150" />
             </div>
-            <div class="col-md-9">
-                <a ui-sref="product({productId: p._id})">
-                    <h5 class="product-name">{{p.name}}</h5>
-                    <p class="product-description">{{p.description}}</p>
-                </a>
+            <div class="col-xs-9">
+                <h2>Title</h2>
+                <p>The description goes here</p>
             </div>
         </div>
+        <div class="row">
+            <div class="col-xs-3 image-container">
+                <img src="http://placehold.it/350x150" />
+            </div>
+            <div class="col-xs-9">
+                <h2>Title</h2>
+                <p>The description goes here</p>
+            </div>
+        </div>
+    </div> -->
+
+     <div ng-repeat="p in vm.products" class="product-box row">
+        <div class="col-xs-3 image-container">
+            <img ng-src="{{p.imageUrl}}" />
+        </div>
+        <div class="col-xs-9">
+            <a ui-sref="product({productId: p._id})">
+                <h5 class="product-name">{{p.name}}</h5>
+                <div class="product-description">{{p.description}}</div>
+            </a>
+        </div>
     </div>
-</form>
+</div>
