--- a/aladdin/index.html
+++ b/aladdin/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title></title>
     <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style>
         /* This helps the ng-show/ng-hide animations start at the right place. */
