extending ticket support in aladdin

--- a/qarin/app/areas/products/product.html
+++ b/qarin/app/areas/products/product.html
@@ -3,4 +3,4 @@
 <img ng-src="{{vm.product.imageUrl}}">
 <div>{{vm.product.description}}</div>
 
-<button ng-click="vm.createChat()">Ask About</button>
+<button ng-click="vm.createTicket()">Ask About</button>
