--- a/qarin/index.html
+++ b/qarin/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>qarin</title>
 
     <style>
         /* This helps the ng-show/ng-hide animations start at the right place. */
