--- a/aladdin/app/areas/aside/aside.html
+++ b/aladdin/app/areas/aside/aside.html
@@ -5,7 +5,7 @@
             <!-- <a ng-href="{{item.url}}"> {{item.name}}</a> -->
             <a ui-state="item.name" ui-sref-active="active">
                 <i ng-class="item.settings.icon"></i>
-                <span class="sidebar-label">{{item.name}}</span>
+                <span class="sidebar-label">{{item.settings.displayName || item.name}}</span>
             </a>
         </li>
     </ul>
