--- a/aladdin/app/areas/tasks/tasks.html
+++ b/aladdin/app/areas/tasks/tasks.html
@@ -1,38 +1,29 @@
 <h2>Tasks</h2>
 
-<div class="row">
-    <ul class="task-list col-md-6">
-        <li ng-repeat="task in vm.tasks" ng-class="['task', task.type, task.selected ? 'selected' : '', isMe(task.assigned_to) ? 'mine' : '']" ng-click="vm.select(task)">
-            <span>{{task.displayTitle}}</span>
-            <div>{{task.created_at | fromNow}}</div>
+<div>
+    <h3>Assigned to me</h3>
+    <ul class="task-list">
+        <li ng-repeat="task in vm.tasks | filter: {mine: true}" ng-class="['task', task.type, task.selected ? 'selected' : '', isMe(task.assigned_to) ? 'mine' : '']">
+            <a ui-sref='task-details({taskId: task._id})'>
+                <div>{{task.displayTitle}}</div>
+                <div>{{task.product.department.name}}</div>
+                <div>{{task.product.name}}</div>
+                <div>{{task.created_at | fromNow}}</div>
+            </a>
         </li>
     </ul>
+</div>
 
-    <div class="task-details col-md-6">
-        <h3>{{vm.selected.displayTitle}}</h3>
-        <div class="button-bar">
-            <button class="btn btn-primary" ng-click="vm.accept()" ng-if="!isMe(vm.selected.assigned_to)">Accept</button>
-            <button class="btn btn-primary" ng-click="vm.complete()" ng-if="isMe(vm.selected.assigned_to)">Complete</button>
-        </div>
-        <form id='chat' ng-submit="vm.sendMessage(vm.selected, vm.message)">
-            <div class="chat-window">
-                <div class="message-pane">
-                    <div ng-repeat="m in vm.chat.messages" ng-class="{'chat-bubble': true, sent: m.sent, received: !m.sent}">
-                        <span class="message-time">{{m.time | date: 'medium'}}</span>
-                        <div class="message-body">{{m.message}}</div>
-                    </div>
-                </div>
-
-                <div class="chat-controls input-group">
-                    <input type="text" ng-model="vm.message" class="form-control">
-                    <span class="input-group-btn">
-                        <button type="submit" class="btn btn-default">
-                            <i class="glyphicon glyphicon-send"></i>
-                        </button>
-                    </span>
-                </div>
-
-            </div>
-        </form>
-    </div>
+<div>
+    <h3>Available</h3>
+    <ul class="task-list">
+        <li ng-repeat="task in vm.tasks | filter: {mine: false}" ng-class="['task', task.type, task.selected ? 'selected' : '', isMe(task.assigned_to) ? 'mine' : '']">
+            <a ui-sref='task-details({taskId: task._id})'>
+                <div>{{task.displayTitle}}</div>
+                <div>{{task.product.department.name}}</div>
+                <div>{{task.product.name}}</div>
+                <div>{{task.created_at | fromNow}}</div>
+            </a>
+        </li>        
+    </ul>
 </div>
