--- a/solomon/wwwroot/index.html
+++ b/solomon/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <base href="/" />
     <meta charset="utf-8" />
-    <title></title>
+    <title>solomon</title>
 
     <style>
         /* This helps the ng-show/ng-hide animations start at the right place. */
