--- a/solomon/app/areas/tasks/tasklist.html
+++ b/solomon/app/areas/tasks/tasklist.html
@@ -8,9 +8,9 @@
 <div>
 	<h2>Open</h2>
     <div ng-repeat="task in vm.tasks" ng-class="['task', task.type, task.status]">
-         <a ui-sref='task-details({taskId: task._id})'>
+         <a ui-sref='ticket-detail({ticketId: task._id})'>
                 <div>{{task.displayTitle}}</div>
-                <div>{{task.product.department.name}}</div>
+                <div>{{task.department.name}}</div>
                 <div>{{task.product.name}}</div>
                 <div>{{task.created_at | fromNow}}</div>
             </a>
