status is being broadcast accross all

--- a/solomon/app/areas/employees/employees.html
+++ b/solomon/app/areas/employees/employees.html
@@ -1,7 +1,14 @@
 <h2>employees</h2>
 <div>
-    <div ng-repeat="emp in vm.employees">
-        <span>{{emp.firstName}} {{emp.lastName}}</span>
+   <!--  <div ng-repeat="emp in vm.employees">
+        <span>{{emp.firstName}} {{emp.lastName}}: {{emp.status}}</span>
+    </div> -->
+    <!-- <pre>{{vm.employees | json}}</pre> -->
+
+    <div ng-repeat="g in vm.groupedEmployees">
+    	<h3>{{g.status}}</h3>
+    	<div ng-repeat="emp in g.employees">
+    		<span>{{emp.firstName}} {{emp.lastName}}: {{emp.status}}</span>
+    	</div>
     </div>
-    <pre>{{vm.employees | json}}</pre>
 </div>
