--- a/qarin/app/areas/chat/chat.html
+++ b/qarin/app/areas/chat/chat.html
@@ -11,14 +11,14 @@
             </div>
         </div>
 
-        <div class="chat-controls input-group">
+       <!--  <div class="chat-controls input-group">
             <input type="text" ng-model="vm.message" class="form-control">
             <span class="input-group-btn">
             	<button type="submit" class="btn btn-default">
                 	<i class="glyphicon glyphicon-send"></i>
             	</button>
         	</span>
-        </div>
+        </div> -->
     </div>
     <!--  <input type="text" name="message" ng-model="vm.message" />
     <button type="submit">Send</button> -->
