--- a/qarin/index.html
+++ b/qarin/index.html
@@ -34,10 +34,8 @@
 
     <div class="device-root">
 
-        <div ng-include="'app/areas/layout/header.html'"></div>
-
+        <div class="top-bar" ng-include="'app/areas/layout/header.html'"></div>
         <div ui-view class="content-area"></div>
-
         <div ui-view="footer" class="device-footer"></div>
 
 
@@ -46,9 +44,9 @@
                 <div class="page-splash-message">
                     qarin
                 </div>
-                <!-- <div class="progress">
-                    <progressbar class="progress-striped active" value="1" max="1"></progressbar>
-                </div>-->
+                <div class="loading">
+                    <i class="fa fa-spinner fa-spin fa-2x"> </i>
+                </div>
             </div>
         </div>
     </div>
