--- a/qarin/index.html
+++ b/qarin/index.html
@@ -35,6 +35,7 @@
     <div class="device-root">
 
         <div class="top-bar" ng-include="'app/areas/layout/header.html'"></div>
+        <div ui-view="header" class="device-header"></div>
         <div ui-view class="content-area"></div>
         <div ui-view="footer" class="device-footer"></div>
 
