--- a/qarin/app/areas/products/product.html
+++ b/qarin/app/areas/products/product.html
@@ -1,6 +1,21 @@
-
 <h2>{{vm.product.name}}</h2>
-<img ng-src="{{vm.product.imageUrl}}">
+<div>
+    <span class="price">{{vm.product.price}}</span>
+</div>
+<div>
+    <img ng-src="{{vm.product.imageUrl}}">
+</div>
+
+
+<!-- <div class="rating-container" ng-init="x = 2; y=5">
+	<rating class="rating" ng-model="x" readonly="true" max="5" ></rating>
+	<rating class="rating rating-value" ng-model="y" readonly="true" max="5" ></rating>
+</div> -->
+
 <div>{{vm.product.description}}</div>
+
+<div class="product-specs">
+
+</div>
 
 <button ng-click="vm.createTicket()">Ask About</button>
