--- a/solomon/app/areas/dashboard/dashboard.html
+++ b/solomon/app/areas/dashboard/dashboard.html
@@ -1,4 +1,14 @@
 ﻿Stuff
 
-<h2>Dashboard</h2>
-{{vm.message}}
+<h2>Dashboard</h2> {{vm.message}}
+
+<div>
+    <div ng-repeat="stat in vm.searchStats" class="card">
+        <!-- <pre>{{stat | json}}</pre> -->
+        {{stat.search}}
+    </div>
+
+    <div google-chart chart="vm.chartOptions">
+    	
+    </div>
+</div>
