--- a/qarin/app/areas/chat/chat.product.html
+++ b/qarin/app/areas/chat/chat.product.html
@@ -1,3 +1,6 @@
 <div class="product-box" ng-if="vm.chat.product">
+    <div class="image-container">
+    	<img ng-src="{{vm.chat.product.imageUrl}}">
+    </div>
     {{vm.chat.product.name}}
 </div>
