--- a/qarin/app/areas/products/product.html
+++ b/qarin/app/areas/products/product.html
@@ -18,4 +18,5 @@
 
 </div>
 
-<button ng-click="vm.createTicket()">Ask About</button>
+<button ng-click="vm.createChat()">Ask About</button>
+<button ng-click="vm.callAssociate()">Call Associate</button>
