--- a/solomon/index.html
+++ b/solomon/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-
+    <script src="scripts/jquery.js"></script>
     <!-- inject:js -->
     <!-- the rest of the *.js files will be injected here -->
     <!-- endinject -->
