random task creation. more charts

--- a/solomon/app/areas/dashboard/dashboard.html
+++ b/solomon/app/areas/dashboard/dashboard.html
@@ -28,6 +28,25 @@
             <flot height="150px" width="100%", dataset="vm.tasksByType.data" options="vm.tasksByType.options"></flot>
         </div>
     </div>
+
+    <div class="col-md-3">
+        <div class="chart card">
+            <div class="chart-title">SLA - Assigned</div>
+            <flot height="150px" width="100%", dataset="vm.sla.assigned.data" options="vm.sla.assigned.options"></flot>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="chart card">
+            <div class="chart-title">SLA - Engaged</div>
+            <flot height="150px" width="100%", dataset="vm.sla.engaged.data" options="vm.sla.engaged.options"></flot>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="chart card">
+            <div class="chart-title">SLA - Closed</div>
+            <flot height="150px" width="100%", dataset="vm.sla.closed.data" options="vm.sla.closed.options"></flot>
+        </div>
+    </div>
 </div>
 <div class="row">
     <div class="col-md-6">
