--- a/solomon/app/areas/dashboard/dashboard.html
+++ b/solomon/app/areas/dashboard/dashboard.html
@@ -47,6 +47,12 @@
             <flot height="150px" width="100%", dataset="vm.sla.closed.data" options="vm.sla.closed.options"></flot>
         </div>
     </div>
+    <div class="col-md-3">
+        <div class="chart card">
+            <div class="chart-title">SLA - Closed</div>
+            <flot height="150px" width="100%", dataset="vm.chatConversion.data" options="vm.chatConversion.options"></flot>
+        </div>
+    </div>
 </div>
 <div class="row">
     <div class="col-md-6">
