--- a/solomon/app/areas/dashboard/dashboard.html
+++ b/solomon/app/areas/dashboard/dashboard.html
@@ -49,7 +49,7 @@
     </div>
     <div class="col-md-3">
         <div class="chart card">
-            <div class="chart-title">SLA - Closed</div>
+            <div class="chart-title">Chat Stats</div>
             <flot height="150px" width="100%", dataset="vm.chatConversion.data" options="vm.chatConversion.options"></flot>
         </div>
     </div>
