--- a/qarin/app/areas/tickets/ticket-created.html
+++ b/qarin/app/areas/tickets/ticket-created.html
@@ -2,4 +2,4 @@
 <p>Your request for help has been heard, and we are currently scrambling our employees to come assist you</p>
 <p>You will be notified as soon as one becomes available</p>
 
-<button class="btn btn-lg btn-block" ng-click="vm.chat()">Chat</button>
+<button class="btn btn-lg btn-block" ui-sref="chat({chatId: vm.ticket.chat})">Chat</button>
